# DomainUpgradeFinder

./: .replit  README.md  RUN_Locally.MD  api_keys.py  api_rotation.py  app.py  app_flask.py  auth_utils.py  background_scheduler.py  blacklist_init.py  business_search_service.py  cache_manager.py  config.py  cookies.txt  domain_analyzer.py  domain_utils.py  email_service.py  keyword_extractor.py  models.py  paypal_integration.py  pyproject.toml  replit.md  security_utils.py  serper_api_utils.py  utils.py
attached_assets/: Pasted-I-want-to-turn-my-existing-Domain-Upgrade-Finder-app-using-serper-dev-for-Google-search-into-a-Saa-1756459022476_1756459022477.txt  Pasted-I-want-you-to-build-me-a-Domain-Upgrade-Finder-App-with-the-following-features-Goal-The-app-analy-1756425142620_1756425142620.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-be-1756460105579_1756460105580.txt  Pasted-PendingRollbackError-sqlalchemy-exc-PendingRollbackError-This-Session-s-transaction-has-been-rolle-1756755961527_1756755961528.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-business-1756728369519_1756728369519.txt  Pasted-TemplateAssertionError-jinja2-exceptions-TemplateAssertionError-No-filter-named-nl2br-Traceb-1756504553915_1756504553916.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-admin-users-html-Traceback-most-recent-cal-1756460580210_1756460580211.txt  content-1756718653950.md  keyword_upgrade_opportunities - keyword_upgrade_opportunities_1756465947160.csv  (+12 more)
(+32 files in other folders)
