[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask-mail>=0.10.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.28.0",
    "stripe>=12.5.0",
    "wtforms>=3.2.1",
    "email-validator>=2.3.0",
    "flask-wtf>=1.2.2",
    "flask-limiter>=3.12",
    "trafilatura>=2.0.0",
    "googlemaps>=4.10.0",
    "geopy>=2.4.1",
    "sendgrid>=6.12.4",
]
